Minor Changes Fixed

--- a/src/components/CollectionCard/CollectionCard.css
+++ b/src/components/CollectionCard/CollectionCard.css
@@ -2,3 +2,7 @@
   /* -webkit-filter: blur(4px); Chrome, Safari, Opera */
   filter: blur(2px);
 }
+
+/* .prodBannerTitle {
+  font-family: "Montserrat" !important;
+} */
